lib/crates/arc-cli/tests/snapshots/cli__model_list_filters_by_provider.snap
---
source: lib/crates/arc-cli/tests/cli.rs
expression: stdout
---
MODEL                          PROVIDER     ALIASES                     CONTEXT     COST                SPEED
claude-opus-4-6                anthropic    opus, claude-opus                1m    $15.0 / $75.0      25 tok/s
claude-sonnet-4-5              anthropic                                   200k     $3.0 / $15.0      50 tok/s
claude-sonnet-4-6              anthropic    sonnet, claude-sonnet          200k     $3.0 / $15.0      50 tok/s
claude-haiku-4-5               anthropic    haiku, claude-haiku            200k     $0.8 / $4.0      100 tok/s
