lib/crates/arc-cli/tests/snapshots/cli__model_list_filters_by_query.snap
---
source: lib/crates/arc-cli/tests/cli.rs
expression: stdout
---
MODEL                          PROVIDER     ALIASES                     CONTEXT     COST                SPEED
claude-opus-4-6                anthropic    opus, claude-opus                1m    $15.0 / $75.0      25 tok/s
